fix main content padding on mobile

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,9 +1,8 @@
-.container {
-    background-color: #def2f1;
-    height: 100vh;
+.main {
+    padding: 1rem;
 }
 
-.main {
+.content {
     max-width: 70rem;
     margin-left: auto;
     margin-right: auto;
